--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -9,7 +9,7 @@
           <img class="card-img-top" src="{{ room.ImageURL }}" height="150px" alt="">
           <div class="card-body">
             <h5 class="card-title">{{ room.Title }}</h5>
-            <p class="card-text"> <b> {{ room.PriceHour }} DKK / Hour </b>  </p>
+            <p class="card-text"> <b> {{ room.PriceHour }} ГРН / год </b>  </p>
             <p class="card-text">(Time Schedule: {{ room.StartProgram }}:00 - {{ room.EndProgram }}:00) </p>
           </div>
           <div class="card-footer">
