--- a/src/app/components/my-reservations/my-reservations.component.html
+++ b/src/app/components/my-reservations/my-reservations.component.html
@@ -22,7 +22,7 @@
                 <td class="text-center" style="font-size:14px;" ><a (click)="redirectToCalendar(reservation)" style="cursor: pointer; color:rgb(52, 111, 223)">{{ reservation.Id }}</a></td>
                 <td class="text-center" style="font-size:14px;">{{ reservation.Room }}</td>
                 <td class="text-center" style="font-size:14px;">{{ reservation.Name }}</td>
-                <td class="text-center" style="font-size:14px;" >{{ reservation.Total }} DKK</td>
+                <td class="text-center" style="font-size:14px;" >{{ reservation.Total }} ГРН</td>
                 <td class="text-center" style="font-size:14px;">{{ reservation.Address }}</td>
                 <td class="text-center" style="font-size:14px;" >{{ reservation.Start | date :'h:mm a dd-MM-y'}}</td>
                 <td class="text-center" style="font-size:14px;">{{ reservation.End | date :'h:mm a dd-MM-y' }}</td>
