--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -6,7 +6,7 @@
                         <span style="font-size:19px;">({{ room.title }})</span> <br>
                         <span>Reservation Name: {{ reservation.title }}</span> <br>
                         <span>From {{ reservation.start | date :'h:mm a'}} - To: {{ reservation.end | date :'h:mm a dd-MM-y'}}</span> <br>
-                        <span style="font-size:27px;">Total: <b>{{ reservation.total }}</b> DKK </span> 
+                        <span style="font-size:27px;">Total: <b>{{ reservation.total }}</b> ГРН </span> 
                 </div>
                 <div #paypal style="width: 100%"></div>
             </div>
